Home Section Completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <header>
         <a href="#" class="logo">Debasish,</a>
 
+        <i class='bx bx-menu' id="menu-icon"></i>
+
         <nav>
             <a href="#" class="active">Home</a>
             <a href="#">Services</a>
@@ -28,6 +30,40 @@
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <!-- Home Section -->
+     <section class="home active">
+      <div class="home-detail">
+        <h1>Debasish Pal</h1>
+        <h2>I'm a 
+          <span style="--i:4;" data-text="Coder">Coder</span>
+          <span style="--i:3;" data-text="Youtuber">Youtuber</span>
+          <span style="--i:2;" data-text="Blogger">Blogger</span>
+          <span style="--i:1;" data-text="Designer">Designer</span>
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nobis, ratione unde vero, magnam blanditiis repellat nihil eligendi sequi animi alias illum. Maxime optio placeat hic est ipsum voluptas soluta.</p>
+        <div class="btn-sci">
+          <a href="#" class="btn">Download CV</a>
+          <div class="sci">
+            <a href="#"><i class='bx bxl-github' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#"><i class='bx bxl-discord' ></i></a>
+            <a href="#"><i class='bx bxl-youtube' ></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="home-img">
+        <div class="img-box">
+          <div class="img-item">
+            <img src="images/home.png">
+          </div>
+        </div>
+      </div>
+     </section>
+
+     <!-- Services Section -->
+      
 
 
     <!-- custom js -->
