Services section done.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <!-- Home Section -->
-     <section class="home active">
+     <section class="home">
       <div class="home-detail">
         <h1>Debasish Pal</h1>
         <h2>I'm a 
@@ -63,7 +63,65 @@
      </section>
 
      <!-- Services Section -->
-      
+      <section class="services active">
+        <h2 class="heading">My <span>Services</span></h2>
+        <div class="services-container">
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bx-code-alt'></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>Web Development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bxs-paint' ></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>UI/UX Design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bx-palette' ></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>Graphic Design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bx-trending-up' ></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>SEO</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bx-slideshow'></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>Video Editing</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+          <div class="services-box">
+            <div class="icon">
+              <i class='bx bx-camera' ></i>
+              <a href="#"><i class='bx bx-arrow-back' ></i></a>
+            </div>
+            <h3>Photography</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolore ut officia dignissimos expedita magni.</p>
+          </div>
+
+        </div>
+      </section>
 
 
     <!-- custom js -->
