Resume Section Building ongoing...

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      </section>
 
      <!-- Services Section -->
-      <section class="services active">
+      <section class="services">
         <h2 class="heading">My <span>Services</span></h2>
         <div class="services-container">
           <div class="services-box">
@@ -123,6 +123,42 @@
         </div>
       </section>
 
+      <!-- Resume section -->
+       <section class="resume active">
+        <div class="resume-container">
+          <div class="resume-box">
+            <h2>Why Hire Me?</h2>
+            <p class="desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem labore veniam impedit debitis, et nesciunt.</p>
+            <button class="resume-btn active">Experience</button>
+            <button class="resume-btn">Education</button>
+            <button class="resume-btn">Skills</button>
+            <button class="resume-btn">About Me</button>
+          </div>
+
+          <div class="resume-box">
+            <div class="resume-detail experience active">
+              <h2 class="heading">My <span>Experience</span></h2>
+              <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+            </div>
+
+            <div class="resume-detail education">
+              <h2 class="heading">My <span>Education</span></h2>
+              <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+            </div>
+
+            <div class="resume-detail skills">
+              <h2 class="heading">My <span>Skills</span></h2>
+              <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+            </div>
+
+            <div class="resume-detail about">
+              <h2 class="heading">About <span>Me</span></h2>
+              <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+            </div>
+
+          </div>
+        </div>
+       </section>
 
     <!-- custom js -->
     <script src="js/script.js"></script>
