--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </section>
 
       <!-- Resume section -->
-       <section class="resume active">
+       <section class="resume">
         <div class="resume-container">
           <div class="resume-box">
             <h2>Why Hire Me?</h2>
@@ -135,30 +135,231 @@
             <button class="resume-btn">About Me</button>
           </div>
 
+          <!-- Experience -->
           <div class="resume-box">
             <div class="resume-detail experience active">
               <h2 class="heading">My <span>Experience</span></h2>
               <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+              <div class="resume-list">
+                <div class="resume-item">
+                  <p class="year">2023 - Present</p>
+                  <h3>Frontend Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2022 - 2023</p>
+                  <h3>FullStack Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2021 - 2022</p>
+                  <h3>Backend Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2023 - Present</p>
+                  <h3>Frontend Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2023 - Present</p>
+                  <h3>Frontend Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2023 - Present</p>
+                  <h3>Frontend Developer</h3>
+                  <p class="company">Abc Corp.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores.</p>
+                </div>
+
+              </div>
             </div>
 
+            <!-- Education -->
             <div class="resume-detail education">
               <h2 class="heading">My <span>Education</span></h2>
               <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+              <div class="resume-list">
+
+                <div class="resume-item">
+                  <p class="year">2024</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2022 - 2023</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2024</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2024</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2024</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+                <div class="resume-item">
+                  <p class="year">2024</p>
+                  <h3>Programming Course</h3>
+                  <p class="company">Online Course</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, impedit.</p>
+                </div>
+
+              </div>
             </div>
 
+            <!-- Skills -->
             <div class="resume-detail skills">
               <h2 class="heading">My <span>Skills</span></h2>
               <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+              <div class="resume-list">
+                <div class="resume-item">
+                  <i class='bx bxl-python' ></i>
+                  <span>Python</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-java' ></i>
+                  <span>Java</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-javascript' ></i>
+                  <span>JavaScript</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-html5' ></i>
+                  <span>HTML5</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-css3' ></i>
+                  <span>CSS3</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-c-plus-plus'></i>
+                  <span>C++</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-nodejs' ></i>
+                  <span>Node.js</span>
+                </div>
+                <div class="resume-item">
+                  <i class='bx bxl-postgresql' ></i>
+                  <span>SQL</span>
+                </div>
+              </div>
             </div>
 
+            <!-- About me -->
             <div class="resume-detail about">
               <h2 class="heading">About <span>Me</span></h2>
               <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam aspernatur minus in at? Fuga, voluptatum.</p>
+              <div class="resume-list">
+                <div class="resume-item">
+                  <p>Name <span>Debasish Pal</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Gender <span>Male</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Age <span>22 Years</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Status <span>Student</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>City <span>Kolkata</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Nationality <span>Indian</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Experience <span>NA</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Full Time <span>Available</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Freelance <span>Available</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Phone <span>(+91) 9733722151</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Language <span>English, Bengali, Hindi</span></p>
+                </div>
+                <div class="resume-item">
+                  <p>Email <span>mailmedebasish04@gmail.com</span></p>
+                </div>
+              </div>
             </div>
 
           </div>
         </div>
        </section>
+
+       <!-- Portfolio Section -->
+        <section class="portfolio active">
+          <h2 class="heading">Latest <span>Project</span></h2>
+          <div class="portfolio-container">
+            <div class="portfolio-box">
+              <div class="portfolio-detail">
+                <p class="numb">01</p>
+              </div>
+
+              <div class="portfolio-detail">
+                <p class="numb">02</p>
+              </div>
+
+              <div class="portfolio-detail">
+                <p class="numb">03</p>
+              </div>
+
+              <div class="portfolio-detail">
+                <p class="numb">04</p>
+              </div>
+
+              <div class="portfolio-detail">
+                <p class="numb">05</p>
+              </div>
+
+              <div class="portfolio-detail">
+                <p class="numb">06</p>
+              </div>
+            </div>
+
+            <div class="portfolio-box">
+              <!-- Image carousel -->
+            </div>
+          </div>
+        </section>
 
     <!-- custom js -->
     <script src="js/script.js"></script>
