Upto Portfolio Section Done.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
     <!-- header -->
     <header>
-        <a href="#" class="logo">Debasish,</a>
+        <a href="#" class="logo">Debasish.</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -330,36 +330,119 @@
           <h2 class="heading">Latest <span>Project</span></h2>
           <div class="portfolio-container">
             <div class="portfolio-box">
-              <div class="portfolio-detail">
+              <div class="portfolio-detail active">
                 <p class="numb">01</p>
+                <h3>FrontEnd Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>HTML5, CSS3, JavaScript</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
 
               <div class="portfolio-detail">
                 <p class="numb">02</p>
+                <h3>FullStack Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>MongoDB, Express.js, React.js, Node.js</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
 
               <div class="portfolio-detail">
                 <p class="numb">03</p>
+                <h3>FrontEnd Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>React.js, Tailwind CSS</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
 
               <div class="portfolio-detail">
                 <p class="numb">04</p>
+                <h3>FullStack Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>MongoDB, Express.js, Angular.js, Node.js</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
 
               <div class="portfolio-detail">
                 <p class="numb">05</p>
+                <h3>FrontEnd Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>Vue.js, Tailwind CSS</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
 
               <div class="portfolio-detail">
                 <p class="numb">06</p>
+                <h3>FullStack Project</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem placeat eligendi, praesentium voluptatem eius quae facilis necessitatibus.</p>
+                <div class="tech">
+                  <p>MongoDB, Express.js, Vue.js, Node.js</p>
+                </div>
+                <div class="live-github">
+                  <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                  <a href="#"><i class='bx bxl-github' ></i><span>Github Repository</span></a>
+                </div>
               </div>
             </div>
 
             <div class="portfolio-box">
               <!-- Image carousel -->
+               <div class="portfolio-carousel">
+                <div class="img-slide">
+                  <div class="img-item">
+                    <img src="images/portfolio1.jpg">
+                  </div>
+                  <div class="img-item">
+                    <img src="images/portfolio2.jpg">
+                  </div>
+                  <div class="img-item">
+                    <img src="images/portfolio3.jpg">
+                  </div>
+                  <div class="img-item">
+                    <img src="images/portfolio4.jpg">
+                  </div>
+                  <div class="img-item">
+                    <img src="images/portfolio5.jpg">
+                  </div>
+                  <div class="img-item">
+                    <img src="images/portfolio6.jpg">
+                  </div>
+                </div>
+               </div>
+
+               <div class="navigation">
+                <button class="arrow-left disabled"><i class='bx bx-chevron-left'></i></button>
+                <button class="arrow-right"><i class='bx bx-chevron-right'></i></button>
+               </div>
             </div>
           </div>
         </section>
+
+        <!-- Contact Section -->
 
     <!-- custom js -->
     <script src="js/script.js"></script>
