contact section work start.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
        </section>
 
        <!-- Portfolio Section -->
-        <section class="portfolio active">
+        <section class="portfolio">
           <h2 class="heading">Latest <span>Project</span></h2>
           <div class="portfolio-container">
             <div class="portfolio-box">
@@ -443,6 +443,44 @@
         </section>
 
         <!-- Contact Section -->
+        <section class="contact active">
+          <div class="contact-container">
+            <div class="contact-box">
+              <h2>Let's work together</h2>
+              <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque quam perspiciatis soluta saepe suscipit eligendi modi architecto magnam nesciunt laudantium. Assumenda, ab. Nostrum incidunt minus a debitis doloremque.</p>
+              <div class="contact-detail">
+                <i class='bx bxs-phone'></i>
+                <div class="detail">
+                  <p>Phone</p>
+                  <p>(+91) 9733722151</p>
+                </div>
+              </div>
+
+              <div class="contact-detail">
+                <i class='bx bxs-envelope' ></i>
+                <div class="detail">
+                  <p>Email</p>
+                  <p>mailmedebasish04@gmail.com</p>
+                </div>
+              </div>
+
+              <div class="contact-detail">
+                <i class='bx bxs-envelope' ></i>
+                <div class="detail">
+                  <p>Address</p>
+                  <p>Dag No 853A, Dharamtala Panchuria, Hazratala Kalibari Road, behind Karigari Bhawan, Newtown, Polerhat, Kolkata, West Bengal 743502</p>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="contact-box">
+              <form action="">
+
+              </form>
+            </div>
+          </div>
+        </section>
 
     <!-- custom js -->
     <script src="js/script.js"></script>
